Bugs bei booleans behoben.